# posmp

./: .gitignore  CLAUDE.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: android.yml  desktop.yml
docs/: BUILD.md  INSTALL.md
server/: relay.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppShell.tsx  SmartwatchClock.tsx
src/components/ui/: Button.tsx
src/db/: database.ts  productPhotos.ts  schema.sql  seed.ts
src/features/access/: KasirPinGate.tsx  PersonaPage.tsx  RequirePerm.tsx  RolesPage.tsx  accessRepository.ts
src/features/approvals/: ApprovalPage.tsx  approvalsRepository.ts
src/features/auth/: LoginPage.tsx  RequireLogin.tsx
src/features/backup/: BackupPage.tsx  backupRepository.ts
src/features/bundles/: BundlesPage.tsx  bundlesRepository.ts
src/features/cash/: CashBalancePage.tsx  cashRepository.ts
src/features/cashiers/: CashiersPage.tsx  cashiersRepository.ts
src/features/connection/: DatabaseConnectionPage.tsx
src/features/contacts/: ContactsPage.tsx  sellersRepository.ts
src/features/drafts/: DraftsPage.tsx
src/features/errors/: ErrorPage.tsx
src/features/history/: HistoryPage.tsx  (+1 more)
src/lib/: SettingsContext.tsx  UIContext.tsx  format.ts  loyalty.ts  realtime.ts  session.ts  settings.ts  syncQueue.ts  themes.ts  tts.ts  useConnection.ts  useRealtime.ts
src/types/: index.ts
(+80 files in other folders)
