[package]
name = "posmerahputih"
version = "1.5.0"
description = "POSMerahPutih — Aplikasi Point of Sale local-first"
authors = ["POSMerahPutih"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
